--- a/okolie.css
+++ b/okolie.css
@@ -86,7 +86,6 @@ a{
 div.nav-list-header{
     height: 5em;
     background: rgba(2,4,5,0.1);
-    padding-left: 2%;
 }
 .navigation, .nav-menu, .nav-list-header{
     display: inline-flex;
@@ -151,11 +150,10 @@ ul{
 }
 .text1{
     position: absolute;
-    top: 17em;
-    font-size: 2em;
+    top: 10em;
+    font-size: 3.5em;
     padding-bottom: 1em;
-    font-family: 'Playfair Display', serif;
-    text-transform: uppercase;
+    font-family: 'Dancing Script', serif;
     color:#404040 ;
     text-shadow: 2px 2px 2px white;
     animation: myfirst 4s linear;
@@ -172,6 +170,7 @@ p {
     color: #cc0000;
     text-shadow: 2px 2px 2px white;
     padding-left: .5em;
+    font-size: .7em;
 }
 @keyframes myfirst {
     from {
@@ -630,75 +629,70 @@ footer{
 }
 
 /* nav bar - hamburger */
-.checkbtn{
-    font-size: 25px;
-    color: #404040;
-    float: right;
-    cursor: pointer;
-    display: none;
-    padding-left: .5em;
-    padding-left: 90%;
+.icon:hover,
+.icon:focus{
+    color: #999999;
 }
-#check{
+.nav-menu .icon {
     display: none;
 }
-#check{
-    display: none;
-}
+/* @ media */
 @media (max-width: 1200px){
     .navigation, .nav-menu, .nav-list-header{
         font-size: 1.1em;
     }
 }
 @media (max-width: 1000px){
-    .menu-social {
-        font-size: .9em;
-    }
     .logo {
         width: 60%;
+    }
+    .text1 {
+        font-size: 3em;
+        top: 12em;
     }
 }
 @media (max-width: 950px){
     .logo {
         width: 65%;
     }
-    .fa-1x {
-        padding-left: 1em;
-    }
     .container-okolie-ciernohronska-zeleznicka,.container-okolie-cyklodrezina,.container-okolie-vydrovo,.container-okolie-ski-cierny-balog,.container-okolie-bystrianska-jaskyna,.container-okolie-nizke-tatry,.container-okolie-tipy{
         font-size: 1em;
+    }
+    .fa-1x {
+        padding-left: 1em;
     }
 }
 
 /* Responzívny nav bar - hamburger */
-@media (max-width: 858px){
-    .checkbtn{
-        display: block;
-    }
-    .fas fa-bars {
-        padding-right: 1em;
-    }
+@media screen and  (max-width: 858px){
     .navigation {
+        display: none;
+    }
+    .nav-menu .icon {
         position: absolute;
+        float: right;
+        display: block;
+        right: 2em;
+        font-size: 25px;
+    }
+    .navigation.responsive .icon {
+        position: absolute;
+        right: 1.5em;
+        top: 0;
+    }
+    .navigation.responsive a {
+        position: relative;
         display: grid;
-        width: 27%;
-        height: 10em;
+        line-height: 1.5em;
         font-size: 1.1em;
-        top: 80px;
-        right: -100%;
-        transition: all .5s;
-        padding-left: 10em;
-        z-index: 99;
+        padding-left: 0em;
     }
-    .nav-list{
+    .navigation.responsive {
+        position: relative;
+        display: grid;
+        top: 7em;
+        padding-left: 50%;
         text-align: right;
-        padding-left: 0;
-    }
-    .nav-list:last-child{
-        padding-right: 0;
-    }
-    #check:checked ~ ul{
-        right:  15%;
     }
 }
 @media (max-width: 820px){
@@ -706,8 +700,8 @@ footer{
         width: 70%;
     }
     .text1 {
-        font-size: 1.7em;
-        top: 20em;
+        font-size: 2.5em;
+        top: 14.8em;
     }
     @keyframes myfirst {
         from {
@@ -719,19 +713,23 @@ footer{
     }
 }
 @media (max-width: 700px) {
-    #check:checked ~ ul{
-        right:  18%;
+    .navigation.responsive {
+        padding-left: 35%;
+    }
+    .nav-menu .icon {
+        right: 1.5em;
     }
 }
 @media (max-width: 620px) {
-    #check:checked ~ ul{
-        right:  20%;
+    .column {
+        width: 50%;
+        padding-bottom: .5em;
+    }
+    .row {
+        padding-top: 1em;
     }
 }
 @media (max-width: 600px) {
-    .checkbtn{
-        font-size: 18px;
-    }
     @keyframes myfirst {
         from {
             left: 0px;
@@ -740,50 +738,80 @@ footer{
             left: 0%;
         }
     }
+    .menu-social {
+        width: 75%;
+    }
+    .nav-menu {
+        width: 25%;
+    }
+    .navigation.responsive {
+        padding-left: 20%;
+    }
 }
-@media (max-width: 550px) {
-    #check:checked ~ ul{
-        right:  24%;
+@media (max-width: 490px){
+    div.nav-list-header {
+        height: 7em;
+    }
+    .menu-social, .personal, .social-icon{
+        display: grid;
+        grid-template-columns: repeat(1, 2fr);
+        align-items: center;
+        padding-left: 1em;
+    }
+    .menu-social {
+        width: 70%;
+    }
+    .nav-menu {
+        width: 30%;
+    }
+    .navigation.responsive {
+        padding-right: 0%;
+        padding-left: 7%;
     }
 }
 @media (max-width: 450px){
-    #check:checked ~ ul{
-        right:  33%;
+    .nav-menu .icon {
+        right: 1em;
+    }
+    .navigation.responsive {
+        padding-left: 18%;
+    }
+    .menu-social, .personal, .social-icon{
+        padding-left: .5em;
+    }
+    .menu-social {
+        width: 60%;
+    }
+    .nav-menu {
+        width: 40%;
     }
     .nav-list-header{
         font-size: 1em;
+        line-height: 1.3em;
+    }
+    .text1 {
+        top: 13em;
     }
 }
 @media (max-width: 350px) {
     .nav-list-header{
+        font-size: 1em;
+        gap: 0;
+    }
+    .menu-social {
+        width: 0;
         font-size: .9em;
     }
-    .fa-1x{
-        padding-left: .9em;
-        font-size: 1.1em;
+    .navigation.responsive {
+        padding-left: 0%;
     }
-    .fa-brands{
-        padding-left: .8em;
-        font-size: 1.4em;
-    }
-    #check:checked ~ ul{
-        right:  35%;
+    .menu-social, .personal, .social-icon{
+        padding-left: .5em;
     }
 }
-@media (max-width: 300px) {
-    .nav-list-header{
-        font-size: .8em;
-    }
-    .fa-1x{
-        padding-left: .8em;
-        font-size: 1em;
-    }
-    .fa-brands{
-        padding-left: .8em;
-        font-size: 1.3em;
-    }
-    #check:checked ~ ul{
-        right:  34%;
+@media (max-width: 310px) {
+    .nav-list-header {
+        font-size: .9em;
     }
 }
 
