--- a/vila-flavia.css
+++ b/vila-flavia.css
@@ -679,6 +679,7 @@ footer{
     }
     .navigation.responsive {
         padding-left: 0%;
+        padding-right: 7%;
     }
     .menu-social, .personal, .social-icon{
         padding-left: .5em;
