--- a/cennik.css
+++ b/cennik.css
@@ -438,6 +438,7 @@ footer{
     }
     .navigation.responsive {
         padding-left: 0%;
+        padding-right: 12%;
     }
     .menu-social, .personal, .social-icon{
         padding-left: .5em;
@@ -447,10 +448,6 @@ footer{
     }
 
 }
-@media (max-width: 310px) {
-    .nav-list-header {
-        font-size: .9em;
-    }
-}
+
 
 
