--- a/ubytovanie.css
+++ b/ubytovanie.css
@@ -833,14 +833,10 @@ footer{
     }
     .navigation.responsive {
         padding-left: 0%;
+        padding-right: 12%;
     }
     .menu-social, .personal, .social-icon{
         padding-left: .5em;
-    }
-}
-@media (max-width: 310px) {
-    .nav-list-header{
-        font-size: .9em;
     }
 }
 
