--- a/kontakt.css
+++ b/kontakt.css
@@ -439,18 +439,20 @@ footer{
         top: 13em;
     }
 }
+@media (max-width: 410px){
+    .navigation.responsive {
+        padding-left: 10%;
+    }
+}
 @media (max-width: 350px) {
-    .nav-list-header{
-        font-size: 1em;
+    .nav-list-header {
         gap: 0;
     }
     .menu-social {
-        width: 0;
         font-size: .9em;
     }
     .navigation.responsive {
-        padding-left: 0%;
-        padding-right: 12%;
+        padding-right: 20%;
     }
     .menu-social, .personal, .social-icon{
         padding-left: .5em;
