--- a/vila-flavia.css
+++ b/vila-flavia.css
@@ -645,7 +645,7 @@ img > p{
         top:  16.8em;
     }
     .container-footer {
-        height: 12em;
+        height: 13em;
     }
     .personal1 {
         font-size: 1em;
@@ -681,6 +681,9 @@ img > p{
     .text1 {
         font-size: 1.7em;
         top: 22em;
+    }
+    .container-footer {
+        height: 16em;
     }
 }
 @media (max-width: 320px){
