--- a/kontakt.css
+++ b/kontakt.css
@@ -425,7 +425,7 @@ h3 {
         top:  16.8em;
     }
     .container-footer {
-        height: 12em;
+        height: 13em;
     }
     .personal1 {
         font-size: 1em;
@@ -464,6 +464,9 @@ h3 {
     }
     .navigation.responsive {
         padding-left: 25%;
+    }
+    .container-footer {
+        height: 16em;
     }
 }
 @media (max-width: 350px) {
