--- a/okolie.css
+++ b/okolie.css
@@ -772,7 +772,7 @@ b {
         top:  16.8em;
     }
     .container-footer {
-        height: 12em;
+        height: 13em;
     }
     .personal1 {
         font-size: 1em;
@@ -811,6 +811,9 @@ b {
     }
     .navigation.responsive {
         padding-left: 25%;
+    }
+    .container-footer {
+        height: 16em;
     }
 }
 @media (max-width: 320px){
