--- a/kontakt.css
+++ b/kontakt.css
@@ -427,9 +427,6 @@ h3 {
     .container-footer {
         height: 13em;
     }
-    .personal1 {
-        font-size: 1em;
-    }
 }
 @media (max-width: 450px){
     .text1 {
@@ -450,8 +447,15 @@ h3 {
         font-size: 2em;
         top: 18em;
     }
-    .button {
+    .container-footer {
+        height: 12em;
+    }
+    .personal {
+        font-size: 1.1em;
+    }
+    #button {
         right: .5em;
+        bottom: 7em;
     }
     .fa-2x {
         font-size: 1.8em;
@@ -465,8 +469,8 @@ h3 {
     .navigation.responsive {
         padding-left: 25%;
     }
-    .container-footer {
-        height: 16em;
+    .personal {
+        font-size: 1em;
     }
 }
 @media (max-width: 350px) {
