--- a/okolie.css
+++ b/okolie.css
@@ -774,9 +774,6 @@ b {
     .container-footer {
         height: 13em;
     }
-    .personal1 {
-        font-size: 1em;
-    }
 }
 @media (max-width: 450px){
     .text1 {
@@ -797,8 +794,15 @@ b {
         font-size: 2em;
         top: 18em;
     }
-    .button {
+    .container-footer {
+        height: 12em;
+    }
+    .personal {
+        font-size: 1.1em;
+    }
+    #button {
         right: .5em;
+        bottom: 7em;
     }
     .fa-2x {
         font-size: 1.8em;
@@ -812,8 +816,8 @@ b {
     .navigation.responsive {
         padding-left: 25%;
     }
-    .container-footer {
-        height: 16em;
+    .personal {
+        font-size: 1em;
     }
 }
 @media (max-width: 320px){
@@ -824,6 +828,7 @@ b {
         font-size: 1.6em;
         top: 24em;
     }
+    
 }
 @media (max-width: 290px){
     .navigation.responsive {
