--- a/ubytovanie.css
+++ b/ubytovanie.css
@@ -806,9 +806,6 @@ p{
     .container-footer {
         height: 13em;
     }
-    .personal1 {
-        font-size: 1em;
-    }
 }
 @media (max-width: 450px){
     .text1 {
@@ -829,8 +826,15 @@ p{
         font-size: 2em;
         top: 18em;
     }
-    .button {
+    .container-footer {
+        height: 12em;
+    }
+    .personal {
+        font-size: 1.1em;
+    }
+    #button {
         right: .5em;
+        bottom: 7em;
     }
     .fa-2x {
         font-size: 1.8em;
@@ -844,8 +848,8 @@ p{
     .navigation.responsive {
         padding-left: 25%;
     }
-    .container-footer {
-        height: 16em;
+    .personal {
+        font-size: 1em;
     }
 }
 @media (max-width: 320px){
