--- a/vila-flavia.css
+++ b/vila-flavia.css
@@ -667,8 +667,15 @@ img > p{
         font-size: 2em;
         top: 18em;
     }
-    .button {
+    .container-footer {
+        height: 12em;
+    }
+    .personal {
+        font-size: 1.1em;
+    }
+    #button {
         right: .5em;
+        bottom: 7em;
     }
     .fa-2x {
         font-size: 1.8em;
@@ -682,8 +689,8 @@ img > p{
         font-size: 1.7em;
         top: 22em;
     }
-    .container-footer {
-        height: 16em;
+    .personal {
+        font-size: 1em;
     }
 }
 @media (max-width: 320px){
