--- a/cennik.css
+++ b/cennik.css
@@ -447,7 +447,7 @@ tr:nth-child(even){
         top: 22em;
     }
     .navigation.responsive {
-        padding-left: 25%;
+        padding-left: 10%;
     }
     .personal {
         font-size: 1em;
@@ -460,17 +460,13 @@ tr:nth-child(even){
 }
 @media (max-width: 320px){
     .navigation.responsive {
-        padding-left: 10%;
+        padding-left: 0;
     }
     .text1 {
         font-size: 1.6em;
         top: 24em;
     }
 }
-@media (max-width: 290px){
-    .navigation.responsive {
-        padding-left: 18%;
-    }
-}
+
 
 
