--- a/kontakt.css
+++ b/kontakt.css
@@ -467,7 +467,7 @@ h3 {
         top: 22em;
     }
     .navigation.responsive {
-        padding-left: 25%;
+        padding-left: 10%;
     }
     .personal {
         font-size: 1em;
@@ -483,16 +483,12 @@ h3 {
 }
 @media (max-width: 320px){
     .navigation.responsive {
-        padding-left: 10%;
+        padding-left: 0;
     }
     .text1 {
         font-size: 1.6em;
         top: 24em;
     }
 }
-@media (max-width: 290px){
-    .navigation.responsive {
-        padding-left: 18%;
-    }
-}
+
 
