--- a/vila-flavia.css
+++ b/vila-flavia.css
@@ -546,6 +546,9 @@ img > p{
         right: 1.5em;
         top: 0;
     }
+    .nav-menu {
+        padding-left: 0;
+    }
     .navigation.responsive a {
         position: relative;
         display: grid;
@@ -682,9 +685,7 @@ img > p{
     }
 }
 @media (max-width: 370px){
-    .navigation.responsive {
-        padding-left: 10%;
-    }
+    
     .text1 {
         font-size: 1.7em;
         top: 22em;
@@ -694,9 +695,7 @@ img > p{
     }
 }
 @media (max-width: 320px){
-    .navigation.responsive {
-        padding-left: 0;
-    }
+    
     .text1 {
         font-size: 1.6em;
         top: 24em;
