--- a/cennik.css
+++ b/cennik.css
@@ -326,6 +326,9 @@ tr:nth-child(even){
         right: 1.5em;
         top: 0;
     }
+    .nav-menu {
+        padding-left: 0;
+    }
     .navigation.responsive a {
         position: relative;
         display: grid;
@@ -446,9 +449,6 @@ tr:nth-child(even){
         font-size: 1.7em;
         top: 22em;
     }
-    .navigation.responsive {
-        padding-left: 10%;
-    }
     .personal {
         font-size: 1em;
     }
@@ -459,14 +459,16 @@ tr:nth-child(even){
     }
 }
 @media (max-width: 320px){
-    .navigation.responsive {
-        padding-left: 0;
-    }
     .text1 {
         font-size: 1.6em;
         top: 24em;
     }
 }
-
+@media (max-width: 290px){
+    .text1 {
+        font-size: 1.3em;
+        top: 30em;
+    }
+}
 
 
