--- a/okolie.css
+++ b/okolie.css
@@ -697,6 +697,9 @@ b {
         right: 1.5em;
         top: 0;
     }
+    .nav-menu {
+        padding-left: 0;
+    }
     .navigation.responsive a {
         position: relative;
         display: grid;
@@ -813,25 +816,19 @@ b {
         font-size: 1.7em;
         top: 22em;
     }
-    .navigation.responsive {
-        padding-left: 10%;
-    }
     .personal {
         font-size: 1em;
     }
 }
 @media (max-width: 320px){
-    .navigation.responsive {
-        padding-left: 10%;
-    }
     .text1 {
         font-size: 1.6em;
         top: 24em;
-    }
-    
+    }    
 }
 @media (max-width: 290px){
-    .navigation.responsive {
-        padding-left: 18%;
+    .text1 {
+        font-size: 1.3em;
+        top: 30em;
     }
 }
