--- a/ubytovanie.css
+++ b/ubytovanie.css
@@ -723,6 +723,9 @@ p{
         right: 1.5em;
         top: 0;
     }
+    .nav-menu {
+        padding-left: 0;
+    }
     .navigation.responsive a {
         position: relative;
         display: grid;
@@ -845,19 +848,19 @@ p{
         font-size: 1.7em;
         top: 22em;
     }
-    .navigation.responsive {
-        padding-left: 10%;
-    }
     .personal {
         font-size: 1em;
     }
 }
 @media (max-width: 320px){
-    .navigation.responsive {
-        padding-left: 0;
-    }
-    .text1 {
+    .text1 {        
         font-size: 1.6em;
         top: 24em;
+    }
+}
+@media (max-width: 290px){
+    .text1 {
+        font-size: 1.3em;
+        top: 30em;
     }
 }
