--- a/kontakt.css
+++ b/kontakt.css
@@ -432,11 +432,11 @@ h3 {
     }
 }
 @media (max-width: 450px){
-    .text1 {
-        top: 13em;
-    }
     .navigation.responsive {
         padding-left: 39%;
+    }
+    .kontakt-kontakt{
+        width: 95%;
     }
 }
 @media (max-width: 410px){
@@ -474,11 +474,9 @@ h3 {
     }
 }
 @media (max-width: 350px) {
-    .container-kontakt {
-        font-size: .9em;
-    }
     .kontakt-kontakt{
-        width: 90%;
+        width: 100%;
+        font-size: .9em;
     }
 }
 @media (max-width: 320px){
