--- a/kontakt.css
+++ b/kontakt.css
@@ -472,6 +472,15 @@ h3 {
     .personal {
         font-size: 1em;
     }
+    .copy {
+        font-size: 1em;
+    }
+    .container-footer {
+        height: 10em;
+    }
+    .kontakt {
+        font-size: 1em;
+    }
 }
 @media (max-width: 350px) {
     .kontakt-kontakt{
@@ -481,14 +490,21 @@ h3 {
 }
 @media (max-width: 320px){
     .text1 {
-        font-size: 1.6em;
-        top: 24em;
+        font-size: 1.5em;
+        top: 26em;
+    }
+    .personal {
+        font-size: .9em;
+    }
+    #button {
+        bottom: 6em;
     }
 }
-@media (max-width: 290px){
+@media (max-width: 300px){
     .text1 {
-        font-size: 1.3em;
-        top: 30em;
+        font-size: 1.4em;
+        top: 28em;
     }
 }
+
 
