--- a/cennik.css
+++ b/cennik.css
@@ -260,6 +260,9 @@ tr:nth-child(even){
     text-align: center;
     font-size: 1.2em;
 }
+.copy p {
+        margin: 0;
+    }
 #button {
     color: #666666;
     position: fixed;
@@ -407,9 +410,13 @@ tr:nth-child(even){
     .text1 {
         font-size: 2.2em;
         top:  16.8em;
+        margin-left: .8em;
     }
     .container-footer {
-        height: 13em;
+        height: 12em;
+    }
+    .kontakt {
+        font-size: 1em;
     }
 }
 @media (max-width: 450px){
@@ -418,6 +425,16 @@ tr:nth-child(even){
     }
     .cennik-1 {
         font-size: .7em;
+    }
+    .text1 {
+        font-size: 2em;
+        top: 18em;
+    }
+    .container-footer {
+        height: 10.5em;
+    }
+    .personal {
+        font-size: 1.1em;
     }
 }
 @media (max-width: 410px){
@@ -428,14 +445,11 @@ tr:nth-child(even){
         padding-left: 35%;
     }
     .text1 {
-        font-size: 2em;
-        top: 18em;
-    }
-    .container-footer {
-        height: 12em;
+        font-size: 1.6em;
+        top: 24em;
     }
     .personal {
-        font-size: 1.1em;
+        font-size: .9em;
     }
     #button {
         right: .5em;
@@ -445,46 +459,20 @@ tr:nth-child(even){
         font-size: 1.8em;
     }
 }
-@media (max-width: 370px){
-    .text1 {
-        font-size: 1.7em;
-        top: 22em;
-    }
-    .personal {
-        font-size: 1em;
-    }
-    .copy {
-        font-size: 1em;
-    }
-    .container-footer {
-        height: 10em;
-    }
-    .kontakt {
-        font-size: 1em;
-    }
-}
 @media (max-width: 350px) {
     .cennik-1 {
         font-size: .6em;
+    }
+}
+@media (max-width: 340px){
+    #button {
+        bottom: 6em;
     }
 }
 @media (max-width: 320px){
     .text1 {
         font-size: 1.5em;
         top: 26em;
-    }
-    .personal {
-        font-size: .9em;
-    }
-    #button {
-        bottom: 6em;
-    }
-}
-@media (max-width: 300px){
-    .text1 {
-        font-size: 1.3em;
-        top: 30em;
-        margin-left: .7em;
     }
     .personal {
         font-size: .8em;
@@ -494,6 +482,13 @@ tr:nth-child(even){
     }
 }
 @media (max-width: 290px){
+    .text1 {
+        font-size: 1.2em;
+        top: 32em;
+    }
+    .personal {
+        font-size: .7em;
+    }
     .cennik-1 {
         font-size: .5em;
     }
