--- a/kontakt.css
+++ b/kontakt.css
@@ -279,6 +279,9 @@ h3 {
     text-align: center;
     font-size: 1.2em;
 }
+.copy p {
+        margin: 0;
+    }
 #button {
     color: #666666;
     position: fixed;
@@ -427,9 +430,13 @@ h3 {
     .text1 {
         font-size: 2.2em;
         top:  16.8em;
+        margin-left: .8em;
     }
     .container-footer {
-        height: 13em;
+        height: 12em;
+    }
+    .kontakt {
+        font-size: 1em;
     }
 }
 @media (max-width: 450px){
@@ -438,6 +445,16 @@ h3 {
     }
     .kontakt-kontakt{
         width: 95%;
+    }
+    .text1 {
+        font-size: 2em;
+        top: 18em;
+    }
+    .container-footer {
+        height: 10.5em;
+    }
+    .personal {
+        font-size: 1.1em;
     }
 }
 @media (max-width: 410px){
@@ -448,14 +465,11 @@ h3 {
         padding-left: 35%;
     }
     .text1 {
-        font-size: 2em;
-        top: 18em;
-    }
-    .container-footer {
-        height: 12em;
+        font-size: 1.6em;
+        top: 24em;
     }
     .personal {
-        font-size: 1.1em;
+        font-size: .9em;
     }
     #button {
         right: .5em;
@@ -465,28 +479,15 @@ h3 {
         font-size: 1.8em;
     }
 }
-@media (max-width: 370px){
-    .text1 {
-        font-size: 1.7em;
-        top: 22em;
-    }
-    .personal {
-        font-size: 1em;
-    }
-    .copy {
-        font-size: 1em;
-    }
-    .container-footer {
-        height: 10em;
-    }
-    .kontakt {
-        font-size: 1em;
-    }
-}
 @media (max-width: 350px) {
     .kontakt-kontakt{
         width: 100%;
         font-size: .9em;
+    }
+}
+@media (max-width: 340px){
+    #button {
+        bottom: 6em;
     }
 }
 @media (max-width: 320px){
@@ -495,23 +496,23 @@ h3 {
         top: 26em;
     }
     .personal {
-        font-size: .9em;
-    }
-    #button {
-        bottom: 6em;
-    }
-}
-@media (max-width: 300px){
-    .text1 {
-        font-size: 1.3em;
-        top: 30em;
-        margin-left: .7em;
-    }
-    .personal {
         font-size: .8em;
     }
     #button {
         bottom: 5em;
+    }
+    .kontakt-kontakt{
+        width: 100%;
+        font-size: .8em;
+    }
+}
+@media (max-width: 290px){
+    .text1 {
+        font-size: 1.2em;
+        top: 32em;
+    }
+    .personal {
+        font-size: .7em;
     }
 }
 
