--- a/okolie.css
+++ b/okolie.css
@@ -628,6 +628,9 @@ b {
     text-align: center;
     font-size: 1.2em;
 }
+.copy p {
+        margin: 0;
+    }
 #button {
     color: #666666;
     position: fixed;
@@ -774,14 +777,28 @@ b {
     .text1 {
         font-size: 2.2em;
         top:  16.8em;
+        margin-left: .8em;
     }
     .container-footer {
-        height: 13em;
+        height: 12em;
+    }
+    .kontakt {
+        font-size: 1em;
     }
 }
 @media (max-width: 450px){
     .navigation.responsive {
         padding-left: 39%;
+    }
+    .text1 {
+        font-size: 2em;
+        top: 18em;
+    }
+    .container-footer {
+        height: 10.5em;
+    }
+    .personal {
+        font-size: 1.1em;
     }
 }
 @media (max-width: 410px){
@@ -792,14 +809,11 @@ b {
         padding-left: 35%;
     }
     .text1 {
-        font-size: 2em;
-        top: 18em;
-    }
-    .container-footer {
-        height: 12em;
+        font-size: 1.6em;
+        top: 24em;
     }
     .personal {
-        font-size: 1.1em;
+        font-size: .9em;
     }
     #button {
         right: .5em;
@@ -809,22 +823,9 @@ b {
         font-size: 1.8em;
     }
 }
-@media (max-width: 370px){
-    .text1 {
-        font-size: 1.7em;
-        top: 22em;
-    }
-    .personal {
-        font-size: 1em;
-    }
-    .copy {
-        font-size: 1em;
-    }
-    .container-footer {
-        height: 10em;
-    }
-    .kontakt {
-        font-size: 1em;
+@media (max-width: 340px){
+    #button {
+        bottom: 6em;
     }
 }
 @media (max-width: 320px){
@@ -833,22 +834,18 @@ b {
         top: 26em;
     }
     .personal {
-        font-size: .9em;
-    }
-    #button {
-        bottom: 6em;
-    }
-}
-@media (max-width: 300px){
-    .text1 {
-        font-size: 1.3em;
-        top: 30em;
-        margin-left: .7em;
-    }
-    .personal {
         font-size: .8em;
     }
     #button {
         bottom: 5em;
+    }
+}
+@media (max-width: 290px){
+    .text1 {
+        font-size: 1.2em;
+        top: 32em;
+    }
+    .personal {
+        font-size: .7em;
     }
 }
