--- a/okolie.css
+++ b/okolie.css
@@ -785,6 +785,9 @@ b {
     .kontakt {
         font-size: 1em;
     }
+    .personal {
+        font-size: 1.1em;
+    }
 }
 @media (max-width: 450px){
     .navigation.responsive {
@@ -798,7 +801,7 @@ b {
         height: 10.5em;
     }
     .personal {
-        font-size: 1.1em;
+        font-size: 1em;
     }
 }
 @media (max-width: 410px){
