--- a/vila-flavia.css
+++ b/vila-flavia.css
@@ -883,6 +883,9 @@ img > p{
     .kontakt {
         font-size: 1em;
     }
+    .personal {
+        font-size: 1.1em;
+    }
 }
 @media (max-width: 450px){
     .navigation.responsive {
@@ -896,7 +899,7 @@ img > p{
         height: 10.5em;
     }
     .personal {
-        font-size: 1.1em;
+        font-size: 1em;
     }
     #button {
         right: .5em;
