--- a/kontakt.css
+++ b/kontakt.css
@@ -438,6 +438,9 @@ h3 {
     .kontakt {
         font-size: 1em;
     }
+    .personal {
+        font-size: 1.1em;
+    }
 }
 @media (max-width: 450px){
     .navigation.responsive {
@@ -454,7 +457,7 @@ h3 {
         height: 10.5em;
     }
     .personal {
-        font-size: 1.1em;
+        font-size: 1em;
     }
 }
 @media (max-width: 410px){
