--- a/ubytovanie.css
+++ b/ubytovanie.css
@@ -817,6 +817,9 @@ p{
     .kontakt {
         font-size: 1em;
     }
+    .personal {
+        font-size: 1.1em;
+    }
 }
 @media (max-width: 450px){
     .navigation.responsive {
@@ -830,7 +833,7 @@ p{
         height: 10.5em;
     }
     .personal {
-        font-size: 1.1em;
+        font-size: 1em;
     }
 }
 @media (max-width: 410px){
